--- a/PositionIn/Browse/BrowseMap/PositionIn.BrowseMapViewController.xib
+++ b/PositionIn/Browse/BrowseMap/PositionIn.BrowseMapViewController.xib
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BrowseMapViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
+                <outlet property="bannerButton" destination="zg0-dx-5rs" id="uhW-Ys-KRh"/>
+                <outlet property="mapViewContainer" destination="qyk-8P-hyK" id="JkM-ok-cCQ"/>
+                <outlet property="mapViewContainerBottomMargin" destination="zCo-zf-mYF" id="QCw-2R-Lp9"/>
                 <outlet property="view" destination="apz-CI-lnL" id="Ctj-nF-5fk"/>
             </connections>
         </placeholder>
@@ -14,7 +17,35 @@
         <view contentMode="scaleToFill" id="apz-CI-lnL">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zg0-dx-5rs">
+                    <rect key="frame" x="0.0" y="540" width="600" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="7xt-sr-y5y"/>
+                    </constraints>
+                    <state key="normal" backgroundImage="pledge_banner"/>
+                    <connections>
+                        <action selector="bannerTapped:" destination="-1" eventType="touchUpInside" id="Xzf-7Y-dwJ"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qyk-8P-hyK">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="540"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="qyk-8P-hyK" secondAttribute="trailing" id="0qZ-Hv-91n"/>
+                <constraint firstItem="zg0-dx-5rs" firstAttribute="leading" secondItem="apz-CI-lnL" secondAttribute="leading" id="KQs-Jl-DAZ"/>
+                <constraint firstItem="qyk-8P-hyK" firstAttribute="leading" secondItem="apz-CI-lnL" secondAttribute="leading" id="bIQ-pM-agl"/>
+                <constraint firstAttribute="trailing" secondItem="zg0-dx-5rs" secondAttribute="trailing" id="rKo-6u-vbn"/>
+                <constraint firstItem="qyk-8P-hyK" firstAttribute="top" secondItem="apz-CI-lnL" secondAttribute="top" id="t8o-bP-l7n"/>
+                <constraint firstAttribute="bottom" secondItem="zg0-dx-5rs" secondAttribute="bottom" id="vqE-02-1pO"/>
+                <constraint firstAttribute="bottom" secondItem="qyk-8P-hyK" secondAttribute="bottom" constant="60" id="zCo-zf-mYF"/>
+            </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="pledge_banner" width="320" height="60"/>
+    </resources>
 </document>
