--- a/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/BloodType/BloodTypeView/DueDateView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/BloodType/BloodTypeView/DueDateView.xib
@@ -23,7 +23,7 @@
                         <action selector="dateChanged:" destination="iN0-l3-epB" eventType="valueChanged" id="ahF-W0-nKE"/>
                     </connections>
                 </datePicker>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your next due date for blood donation?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0i-U3-F4i">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When is your next date for blood donation?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R0i-U3-F4i">
                     <rect key="frame" x="8" y="8" width="284" height="40"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
