--- a/PositionIn/Views/FeedListCells/PositionIn.EventListCell.xib
+++ b/PositionIn/Views/FeedListCells/PositionIn.EventListCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,52 +11,53 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GnF-Pv-vLq" id="TFc-Vu-PWQ">
-                <rect key="frame" x="0.0" y="0.0" width="287" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="200" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="2Qd-Ow-tWX">
-                        <rect key="frame" x="2" y="2" width="70" height="70"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFd-i1-r0a">
+                        <rect key="frame" x="0.0" y="0.0" width="287" height="74"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="200" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="2Qd-Ow-tWX">
+                                <rect key="frame" x="2" y="2" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="SJh-Wg-PYW"/>
+                                    <constraint firstAttribute="width" constant="70" id="rV9-Ay-hKm"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" fixedFrame="YES" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4VF-n0-3AX">
+                                <rect key="frame" x="76" y="7" width="211" height="20"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="258" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" fixedFrame="YES" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0f6-m8-Qsa">
+                                <rect key="frame" x="76" y="54" width="211" height="17"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="260" fixedFrame="YES" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmL-oh-349">
+                                <rect key="frame" x="76" y="32" width="211" height="17"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                <color key="textColor" red="0.61176470589999998" green="0.61176470589999998" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="70" id="SJh-Wg-PYW"/>
-                            <constraint firstAttribute="width" constant="70" id="rV9-Ay-hKm"/>
+                            <constraint firstItem="2Qd-Ow-tWX" firstAttribute="leading" secondItem="qFd-i1-r0a" secondAttribute="leading" constant="2" id="ZBL-gD-shR"/>
+                            <constraint firstItem="2Qd-Ow-tWX" firstAttribute="top" secondItem="qFd-i1-r0a" secondAttribute="top" constant="2" id="lhO-ig-vsv"/>
+                            <constraint firstAttribute="bottom" secondItem="2Qd-Ow-tWX" secondAttribute="bottom" constant="2" id="qrU-uq-QBg"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4VF-n0-3AX">
-                        <rect key="frame" x="76" y="7" width="211" height="21"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="258" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0f6-m8-Qsa">
-                        <rect key="frame" x="76" y="55" width="211" height="17"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                        <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="260" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmL-oh-349">
-                        <rect key="frame" x="76" y="33" width="211" height="17"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                        <color key="textColor" red="0.61176470589999998" green="0.61176470589999998" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="JmL-oh-349" firstAttribute="leading" secondItem="2Qd-Ow-tWX" secondAttribute="trailing" constant="4" id="Cl2-yC-b2A"/>
-                    <constraint firstItem="4VF-n0-3AX" firstAttribute="top" secondItem="TFc-Vu-PWQ" secondAttribute="topMargin" constant="-1" id="HeW-iu-JNp"/>
-                    <constraint firstItem="0f6-m8-Qsa" firstAttribute="top" secondItem="JmL-oh-349" secondAttribute="bottom" constant="5" id="LPJ-ld-NHm"/>
-                    <constraint firstItem="0f6-m8-Qsa" firstAttribute="leading" secondItem="2Qd-Ow-tWX" secondAttribute="trailing" constant="4" id="QyR-tf-QiY"/>
-                    <constraint firstItem="4VF-n0-3AX" firstAttribute="leading" secondItem="2Qd-Ow-tWX" secondAttribute="trailing" constant="4" id="bnl-g2-Pej"/>
-                    <constraint firstItem="JmL-oh-349" firstAttribute="top" secondItem="4VF-n0-3AX" secondAttribute="bottom" constant="5" id="gxO-nk-SRs"/>
-                    <constraint firstItem="2Qd-Ow-tWX" firstAttribute="top" secondItem="TFc-Vu-PWQ" secondAttribute="top" constant="2" id="ifV-aW-NaG"/>
-                    <constraint firstItem="2Qd-Ow-tWX" firstAttribute="leading" secondItem="TFc-Vu-PWQ" secondAttribute="leading" constant="2" id="tLP-TR-yWE"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="0f6-m8-Qsa" secondAttribute="bottom" constant="-5" id="thZ-Bl-snW"/>
+                    <constraint firstItem="qFd-i1-r0a" firstAttribute="top" secondItem="TFc-Vu-PWQ" secondAttribute="top" id="YyD-h1-irG"/>
+                    <constraint firstAttribute="trailing" secondItem="qFd-i1-r0a" secondAttribute="trailing" id="p8X-ND-5zQ"/>
+                    <constraint firstAttribute="bottom" secondItem="qFd-i1-r0a" secondAttribute="bottom" id="sDu-Kv-TfX"/>
+                    <constraint firstItem="qFd-i1-r0a" firstAttribute="leading" secondItem="TFc-Vu-PWQ" secondAttribute="leading" id="smh-9Z-KrR"/>
                 </constraints>
             </tableViewCellContentView>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="JmL-oh-349" secondAttribute="trailing" constant="33" id="BoM-X9-PSp"/>
-                <constraint firstAttribute="trailing" secondItem="0f6-m8-Qsa" secondAttribute="trailing" constant="33" id="aGU-H9-bsf"/>
-                <constraint firstAttribute="trailing" secondItem="4VF-n0-3AX" secondAttribute="trailing" constant="33" id="dg0-0G-0u1"/>
-            </constraints>
             <connections>
                 <outlet property="dateLabel" destination="JmL-oh-349" id="6D6-X8-75Q"/>
                 <outlet property="infoLabel" destination="0f6-m8-Qsa" id="y7v-QQ-e0L"/>
