--- a/GitHubRESTAPITestProject/Base.lproj/Main.storyboard
+++ b/GitHubRESTAPITestProject/Base.lproj/Main.storyboard
@@ -121,8 +121,8 @@
                             <rect key="frame" x="180" y="7" width="240" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
-                                <segment title="First"/>
-                                <segment title="Second"/>
+                                <segment title="Public"/>
+                                <segment title="Starred"/>
                                 <segment title="My Gists"/>
                             </segments>
                             <connections>
