--- a/GitHubRESTAPITestProject/Base.lproj/Main.storyboard
+++ b/GitHubRESTAPITestProject/Base.lproj/Main.storyboard
@@ -36,12 +36,55 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="lNT-xY-Rsp">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="aboutCell" id="lNT-xY-Rsp" customClass="AboutGistCell" customModule="GitHubRESTAPITestProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lNT-xY-Rsp" id="6LK-LU-BxJ">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Row title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nz-7i-Qnt">
+                                                    <rect key="frame" x="16" y="2" width="576" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Row text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="saD-JG-TTU">
+                                                    <rect key="frame" x="16" y="18" width="576" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="saD-JG-TTU" firstAttribute="leading" secondItem="6LK-LU-BxJ" secondAttribute="leading" constant="16" id="6jJ-Mb-aOw"/>
+                                                <constraint firstAttribute="bottom" secondItem="saD-JG-TTU" secondAttribute="bottom" constant="4" id="6y2-8p-v0d"/>
+                                                <constraint firstItem="6nz-7i-Qnt" firstAttribute="leading" secondItem="6LK-LU-BxJ" secondAttribute="leading" constant="16" id="CK2-uM-xQe"/>
+                                                <constraint firstItem="6nz-7i-Qnt" firstAttribute="top" secondItem="6LK-LU-BxJ" secondAttribute="top" constant="2" id="cWg-1a-pNT"/>
+                                                <constraint firstAttribute="trailing" secondItem="saD-JG-TTU" secondAttribute="trailing" constant="8" id="eKF-LC-u15"/>
+                                                <constraint firstAttribute="trailing" secondItem="6nz-7i-Qnt" secondAttribute="trailing" constant="8" id="gz7-tw-glG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descriptionLabel" destination="saD-JG-TTU" id="Cr2-yF-aNC"/>
+                                            <outlet property="titleLabel" destination="6nz-7i-Qnt" id="rgl-mO-T8I"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="defaultCell" textLabel="gPM-8b-Kkb" style="IBUITableViewCellStyleDefault" id="FJ3-GN-byR">
+                                        <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FJ3-GN-byR" id="UFS-zQ-8cD">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gPM-8b-Kkb">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -66,7 +109,7 @@
                         </variation>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="Gist Detail" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="tableView" destination="yil-qS-iDX" id="2lR-Cq-Jn1"/>
                     </connections>
